fixed overflow scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ body {
         -ms-flex-pack: start;
             justify-content: flex-start;
     min-height: 100vh;
+    overflow: hidden;
+
 }
 
 .wrapper > * {
